# ai-resume-backend

./: .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: a3d9aefffc6c_init_db.py
app/: celery.py  main.py  websocket.py
app/core/: base_models.py  settings.py
app/core/extended_settings/: app.py  cors.py  database.py  langfuse.py  llm.py
app/database/: engine.py  models.py
app/modules/: ocr.py  vector.py
app/services/chatbot/: chatbot_agents.py  chatbot_router.py  chatbot_tasks.py
app/services/resume/: resume_methods.py  resume_router.py  resume_schema.py  resume_service.py  resume_tasks.py
app/utils/: llm_clients.py  redis_client.py  vector_client.py  websocker_helper.py
