[project]
name = "ai-resume-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "chromadb>=1.0.20",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "mistralai>=1.9.10",
    "openai>=1.106.1",
    "openai-agents>=0.2.11",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
