[project]
name = "ai-resume-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "bson>=0.5.10",
    "celery>=5.5.3",
    "chromadb>=1.0.20",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "mistralai>=1.9.10",
    "openai>=1.106.1",
    "openai-agents>=0.2.11",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "ruff>=0.12.12",
    "scalar-fastapi>=1.3.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
