[project]
name = "ai-resume-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "black>=25.1.0",
    "bson>=0.5.10",
    "celery>=5.5.3",
    "chromadb>=1.0.20",
    "fastapi[standard]>=0.116.1",
    "flower>=2.0.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "mistralai>=1.9.10",
    "openai>=1.106.1",
    "openai-agents>=0.2.11",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "ruff>=0.12.12",
    "scalar-fastapi>=1.3.0",
    "sqlmodel>=0.0.24",
    "tavily-python>=0.7.11",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E722"]
exclude = ["alembic"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
^/alembic/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["alembic/*"]